--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ body {
 
 .populaire-list img {
   width: 33%;
-  border-radius: 1rem 0 0 1rem;
+  border-radius: 2rem 0 0 2rem;
   object-fit: cover;
 }
 
@@ -392,7 +392,7 @@ footer {
 }
 .main-footer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));;
   max-width: 1440px;
   margin: auto;
   padding: 0 2rem 2rem;
